[package]
name = "rust-ml"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "*"
burn-tensor = { git = "https://github.com/tracel-ai/burn", features = [
    "cubecl-cuda",
    "cubecl-wgpu",
], optional = true }
burn-fusion = { git = "https://github.com/tracel-ai/burn", optional = true }
burn-cubecl = { git = "https://github.com/tracel-ai/burn", optional = true }
burn-tch = { git = "https://github.com/tracel-ai/burn", optional = true }
mimalloc = { version = "*" }
candle-core = { version = "*", features = ["cudnn"], optional = true }
burn-candle = { git = "https://github.com/tracel-ai/burn", features = [
    "cuda",
], optional = true }

[features]
default = ["burn-cubecl"]
burn = ["dep:burn-tensor", "dep:burn-fusion"]
candle = ["dep:candle-core"]
burn-cubecl = ["burn", "dep:burn-cubecl"]
burn-tch = ["burn", "dep:burn-tch"]
burn-candle = ["burn", "dep:burn-candle"]


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"
