[package]
name = "rust-tensor"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "*"
burn-tensor = { git = "https://github.com/burn-rs/burn", rev = "89de0e13926291028817983d65c242906d3b649b", features = [
    "cubecl-cuda",
] }
burn-fusion = { git = "https://github.com/burn-rs/burn", rev = "89de0e13926291028817983d65c242906d3b649b" }
burn-cubecl = { git = "https://github.com/burn-rs/burn", rev = "89de0e13926291028817983d65c242906d3b649b" }
mimalloc = { version = "*" }
cudarc = { version = "*", features = ["f16", "cublas", "cuda-version-from-build-system"]}
rand = "*"

candle-core = { version = "*", features = ["cudnn"] }
clap = { version = "*", features = ["derive"] }


# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# debug = false
# panic = "abort"
