[package]
name = "rust-tensor"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "*"
burn-tensor = { git = "https://github.com/burn-rs/burn", features = [
    "cubecl-cuda",
] }
burn-fusion = { git = "https://github.com/burn-rs/burn" }
burn-cubecl = { git = "https://github.com/burn-rs/burn" }
mimalloc = { version = "*" }
cudarc = { version = "*", features = ["f16", "cublas", "cuda-version-from-build-system"]}
rand = "*"

candle-core = { version = "*", features = ["cudnn"] }
clap = { version = "*", features = ["derive"] }


# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# debug = false
# panic = "abort"
