[package]
name = "rust-tensor"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "*"
burn-fusion = { git = "https://github.com/burn-rs/burn" }
burn-cubecl = { git = "https://github.com/burn-rs/burn" }
mimalloc = { version = "*" }
rand = "*"
clap = { version = "*", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies.candle-core]
version = "*"
features = ["metal"]
[target.'cfg(not(target_os = "macos"))'.dependencies.candle-core]
version = "*"
features = ["cudnn"]

[target.'cfg(target_os = "macos")'.dependencies.burn-tensor]
git = "https://github.com/burn-rs/burn"
features = ["cubecl-wgpu"]

[target.'cfg(not(target_os = "macos"))'.dependencies.burn-tensor]
git = "https://github.com/burn-rs/burn"
features = ["cubecl-cuda"]

[target.'cfg(not(target_os = "macos"))'.dependencies.cudarc]
version = "*"
features = ["f16", "cublas", "cuda-version-from-build-system"]


# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# debug = false
# panic = "abort"
# [patch.'https://github.com/burn-rs/burn']
# burn-tensor = { path = "../../../burn/crates/burn-tensor" }
